# nandaxirpl

./: desainheader.html  desainlayout.html  div.html  kerangka.html  list.html  posisiarea2.html
.github/: copilot-instructions.md
biodata/: biodata.php  style.css
dracingila-website/: dracingila.html  index.html
gabut/: desain.css  index.html  index2.html  style.css  web.html
gabut/mt5-clone/: CMakeLists.txt  README.md  docker-compose.yml  package.json
gabut/mt5-clone/docs/: architecture.md
gabut/mt5-clone/src/client/electron/: main.ts  preload.ts
gabut/mt5-clone/src/client/electron/renderer/components/: Chart.tsx
gabut/mt5-clone/src/client/electron/renderer/styles/: index.css
gabut/mt5-clone/src/core/engine/: CMakeLists.txt  engine.cpp  engine.h
gabut/mt5-clone/src/core/indicators/: rsi.cpp
gabut/mt5-clone/src/server/: api.ts
gabut/mt5-clone/src/server/controllers/: trades.ts
gabut/mt5-clone/src/server/services/: market-data.ts
gabut/mt5-clone/src/shared/types/: index.ts
hello_word/: divmod.php  forloop.php  ifelse.php  ifelseif.php  latihan.php  listvariable.php  switchcase.php  tugas.php
javascript/: Persegi.js  index.html  lingkaran.js  persegipanjang.js  script.js  script2.js  segitiga.js
kasir/: index.html  script.js  style.css
modul3/: input.html  objek.html  objekcheckbox.html  objekradio.html  objekselect.html  objektextarea.html
modul4/: index.html  index2.html  index3.html  index4.html
modul5/: latihan1.html  latihan2.html  perulangan1.html  perulangan2.html  perulangan3.html
modul6/: latihan1.html  latihan2.html  (+4 more)
(+111 files in other folders)
